--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Blog
-subtitle: Hitchhiker's guid to web development
+title: Poetry
+subtitle: a personal website for my poetry
 sitemap:
   priority: 0.9
 ---
